@startuml
title Robot Framework Package Diagram
top to bottom direction
namespace fast::rf {
  namespace messages {
    package AwarenessMsgs  {
    }
    package GeometryMsgs {

    }
    package NavMsgs {

    }
    package SensorMsgs {

    }
    package StandardMsgs {

    }
    GeometryMsgs --> StandardMsgs: <<use>>
    NavMsgs --> GeometryMsgs: <<use>>
    AwarenessMsgs --> GeometryMsgs: <<use>>
  }
  namespace AwarenessSystem {
    namespace ObjectFusionSubsystem {

    }
    namespace GlobalAwarenessSubsystem {

    }
    namespace LocalAwarenessSubsystem {

    }
    namespace ObjectPredictionSubsystem {

    }

  }
  namespace BaseMachineSystem #Yellow {
    namespace BaseMachineSubsystem #Yellow {
      interface IHatDriverProcess #LimeGreen
      class ServoHatDriverProcess #LimeGreen
      class IServoHatDriver #LimeGreen
      class ServoDriver #LimeGreen
      ServoDriver -up-|> IServoHatDriver
      ServoHatDriverProcess -up-|> IHatDriverProcess
      ServoHatDriverProcess --> IServoHatDriver: <<use>>
    }
  }
  namespace CommsSystem {

  }
  namespace DataStorageSystem {

  }
  namespace GoalPlanningSystem {

  }
  namespace ImplementControlSystem {

  }
  namespace NavigationSystem #Yellow {
    namespace GlobalPlannerSubsystem {
      namespace GlobalPlannerManagerProcess {
        interface IGlobalPlannerManagerProcess
      }
      namespace GlobalPathStorageProcess {
        interface IGlobalPathStorageProcess
      }
      namespace FreeSpacePlannerProcess {
        interface IFreeSpacePlannerProcess
      }
      namespace GlobalPathRoutePlannerProcess {
        interface IGlobalPathRoutePlannerProcess
      }
    }
    namespace LocalPlannerSubsystem {

    }
    namespace NavigationExecutorSubsystem #Yellow {
      interface IDriveExecutorProcess #LimeGreen
      class TankDriveExecutorProcess #LimeGreen
      TankDriveExecutorProcess -up-|> IDriveExecutorProcess
      interface ITrajectoryControllerProcess
      interface ITrajectorySelectorProcess
    }

  }
  NavigationSystem --> NavMsgs: <<use>>
  NavigationSystem --> GeometryMsgs: <<use>>
  namespace PerceptionSystem {

  }
  namespace PoseSystem {
    namespace InertialSensorSubsystem {
    }
    namespace GlobalSensorSubsystem {
    }
    namespace GlobalPoseSubsystem {
    }
    namespace LocalPoseSubsystem {
    }
  }
  PoseSystem --> GeometryMsgs: <<use>>
  namespace SafetySystem #Yellow {
    namespace ModeManagerSubsystem #Yellow {
      interface IArmedStateManagerProcess #LimeGreen {

      }
      class ArmedStateManagerProcess #LimeGreen {
      }
      ArmedStateManagerProcess -up-|> IArmedStateManagerProcess
    }
  }
  namespace TerrainSystem {

  }
  namespace UserInterfaceSystem #Yellow {
    namespace RemoteControlSubsystem #Yellow {
      namespace TeleopControlProcess #LimeGreen {
        interface ITeleopControlProcess #LimeGreen
        class BasicTeleopControlProcess #LimeGreen
        BasicTeleopControlProcess -up-|> ITeleopControlProcess
      }
    } 

  }
}

@enduml